# ewatercycle-wflowjl

./: .bumpversion.cfg  .prospector.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.dev.md  README.md  generate_cmip_forcing.ipynb  juliapkg.json  next_steps.md  project_setup.md  pyproject.toml  setup.cfg  sonar-project.properties  test_wflowjl_local.ipynb
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml
docs/: Makefile  conf.py  demo.ipynb  generate_era5_forcing_humber.ipynb  index.rst  make.bat  wflowjl_local.ipynb
notebooks/: pywflow_example.ipynb
pywflow/: __init__.py  my_module.py  wflow.py
src/ewatercycle_wflowjl/: __init__.py  model.py  utils.py
src/ewatercycle_wflowjl/forcing/: diagnostic_script.py  forcing.py  makkink.py
tests/: hbv_config.toml  test_my_module.py  test_wflow.py
