[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ewatercycle_wflowjl/__init__.py"

[project]
name = "ewatercycle-wflowjl"
description = "Wflow.jl eWaterCycle plugin"
readme = "README.md"
license = "Apache-2.0"
version = "0.0.1"
authors = [
  { name = "Bart Schilperoort, Peter Kalverla, Stefan Verhoeven", email = "b.schilperoort@esciencecenter.nl" },
]
keywords = ["ewatercycle", "hydrology"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
]

# Include here only the dependencies for the eWaterCycle wrapped model
dependencies = [
  "ewatercycle",
  "juliacall",
]

# This registers the plugin such that it is discoverable by eWaterCycle
[project.entry-points."ewatercycle.models"]
WflowJl = "ewatercycle_wflowjl.model:WflowJl"
