# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Bart Schilperoort
author_email = b.schilperoort@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Python wrapper for the Wflow.jl Basic Model Interface
keywords =
    python
    BMI
    Wflow
    Wflow.jl
    Julia
long_description = file: README.md
long_description_content_type = text/markdown
name = pywflow
project_urls =
    Bug Tracker = https://github.com/eWaterCycle/pywflow/issues
url = https://github.com/eWaterCycle/pywflow
version = 0.1.0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    juliacall
    numpy

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    black
    coverage [toml]
    prospector[with_pyroma]
    isort
    mypy
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = pywflow, pywflow.*

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = pywflow
src_paths = pywflow,tests
line_length = 120
